# DemoOfSomething

DemoOfSomething/: BattleHandler.h  CMakeLists.txt  Character.cpp  CharacterCharacteristics.cpp  CharacterCharacteristics.h  EventHandler.h  GameClass.h  GamePlayHandler.cpp  GamePlayHandler.h  Interface.cpp  Inventory.cpp  Inventory.h  Item.cpp  Key.cpp  Lockpick.cpp
DemoOfSomething/JsonFiles/: Abilities.json  Class.json  Escape.json  EscapeDialog.json  Race.json
DemoOfSomething/Text/: Entry.txt
DemoOfSomething/header/: BattleEvent.h  BattleHandler.h  Character.h  CharacterCharacteristics.h  DialogEvent.h  EventHandler.h  GameEvent.h  GamePlayHandler.h  Interface.h  Item.h  Lock.h  Lockpick.h  LockpickingEvent.h  ReceiveItemsEvent.h  SurpriseAttackEvent.h  UseKeyEvent.h
DemoOfSomething/src/: Ability.cpp  BattleEvent.cpp  BattleHandler.cpp  Character.cpp  CharacterCharacteristics.cpp  DialogEvent.cpp  EventHandler.cpp  GamePlayHandler.cpp  Interface.cpp  Inventory.cpp  Item.cpp  Key.cpp  Lock.cpp  Lockpick.cpp  LockpickingEvent.cpp  ReceiveItemsEvent.cpp  SurpriseAttackEvent.cpp  UseKeyEvent.cpp  main.cpp
Simple_RPG/: Ability.cpp  Ability.h  BattleHandler.cpp  Character.cpp  Character.h  EventHandler.cpp  EventHandler.h  GameClass.h  GamePlayHandler.cpp  GamePlayHandler.h  Interactive.cpp  Interactive.h  Interface.cpp  Interface.h  Item.cpp  Item.h  Key.cpp  Key.h  Lock.cpp  Lock.h  Lockpick.cpp  Lockpick.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Race.h  main.cpp
Simple_RPG/JsonFiles/: Class.json  Escape.json  Escape_choice.json  Items.json  Race.json
(+5 files in other folders)
